--- a/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_aberto.xml
@@ -4,6 +4,245 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetalhesChamadoAberto">
+    tools:context=".DetalhesChamadoAberto"
+    android:background="@color/blue">
+
+
+
+    <View
+        android:id="@+id/view_detalhes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/container_components"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="20dp"
+
+
+        />
+
+    <TextView
+        android:id="@+id/numero_chamado_detalhes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="#2023226598"
+        android:textSize="10dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toTopOf="@+id/view_detalhes"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        />
+
+    <View
+        android:id="@+id/flag_aberto"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/flag_aberto"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintEnd_toEndOf="@+id/view_detalhes"
+        app:layout_constraintTop_toTopOf="@+id/view_detalhes"
+        android:layout_marginTop="45dp"
+        android:layout_marginHorizontal="60dp"
+
+        />
+
+
+    <TextView
+        android:id="@+id/flag_andamento_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="aberto"
+        android:textSize="24dp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@id/flag_aberto"
+        app:layout_constraintTop_toTopOf="@id/flag_aberto"
+        app:layout_constraintEnd_toEndOf="@id/flag_aberto"
+        app:layout_constraintBottom_toBottomOf="@id/flag_aberto"
+
+        />
+
+    <TextView
+        android:id="@+id/campus_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CAMPUS"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@id/flag_andamento_text"
+        android:layout_marginTop="40sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/editTexCampus"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@id/flag_aberto"
+        app:layout_constraintStart_toEndOf="@+id/campus_textview"
+        android:layout_widtht="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="140dp"
+        android:hint="Politécnico"
+        android:inputType="text" />
+
+
+
+    <TextView
+        android:id="@+id/predio_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PRÉDIO"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@id/campus_textview"
+        android:layout_marginTop="30sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/editTextPredio"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@id/editTexCampus"
+        app:layout_constraintStart_toEndOf="@+id/campus_textview"
+        android:layout_widtht="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="140dp"
+        android:hint="SEPT"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/descricao_localizacao_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Descreva a localização"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@id/editTextPredio"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/descricao_localizacao_editText"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        android:layout_widtht="match_parent"
+        android:layout_height="90sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="60dp"
+        android:hint=""
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/descricao_problema_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Descreva o problema"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_editText"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <EditText
+        android:id="@+id/descricao_problema_editText"
+        style="@style/editText"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        android:layout_widtht="match_parent"
+        android:layout_height="150sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="60dp"
+        android:hint=""
+        android:inputType="text" />
+
+
+    <TextView
+        android:id="@+id/anexos_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anexos"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/add_anexos"
+        style="@style/Button_anexos"
+        android:onClick="adicionaAnexo"
+        android:text="+"
+        android:textAllCaps="true"
+        app:layout_constraintTop_toBottomOf="@id/anexos_textview"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="60sp"
+
+
+        />
+
+    <TextView
+        android:id="@+id/botao_excluir_chamado"
+        style="@style/linkAcesso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="excluirChamado"
+        android:text="excluir chamado"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="40dp"/>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
