--- a/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
+++ b/app/src/main/res/layout/activity_detalhes_chamado_em_andamento.xml
@@ -188,4 +188,61 @@
 
 
 
+    <View
+        android:id="@+id/viewStatus"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:background="@drawable/container_components"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_detalhes"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="20dp"
+
+        />
+
+    <TextView
+        android:id="@+id/status_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STATUS"
+        android:textSize="15dp"
+        android:textColor="@color/blue"
+        app:layout_constraintStart_toStartOf="@+id/viewStatus"
+        app:layout_constraintTop_toTopOf="@+id/viewStatus"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+    <ImageView
+        android:id="@+id/imagem_status"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/worker"
+        app:layout_constraintStart_toStartOf="@+id/viewStatus"
+        app:layout_constraintTop_toBottomOf="@+id/status_textview"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+        />
+
+
+    <TextView
+        android:id="@+id/status_descricao"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5sp"
+        android:layout_marginTop="20dp"
+        android:text="Necessário troca da torneira, aguardando peça pelo almoxarifado"
+        android:textAlignment="textStart"
+        android:textColor="@color/gray"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="@+id/viewStatus"
+        app:layout_constraintStart_toEndOf="@+id/imagem_status"
+        app:layout_constraintTop_toBottomOf="@+id/status_textview"
+
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
