--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,23 @@
 
 
     </style>
+    <style name="Button_anexos">
+        <item name="android:layout_width">65dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:background">@drawable/button_anexos</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">@color/blue</item>
+
+
+
+
+    </style>
+
+
+
+
+
 
     
     
