--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,24 @@
     </style>
 
 
+    <style name="Button_sobre">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:background">@drawable/button_sobre</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/black</item>
+
+
+
+
+    </style>
+
+
+
+
 
 
 
