--- a/app/src/main/res/layout/activity_sobre_app.xml
+++ b/app/src/main/res/layout/activity_sobre_app.xml
@@ -49,7 +49,7 @@
         android:id="@+id/buttonPoliticaPrivacidade"
         style="@style/Button_sobre"
         android:onClick="mostrarPolitica"
-        android:text="Poítica de Privacidade"
+        android:text="Política de Privacidade"
         android:layout_marginTop="70dp"
         app:layout_constraintTop_toBottomOf="@id/imagemufprSobre"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,13 +71,81 @@
 
     <TextView
         android:id="@+id/textoSobre"
-        android:layout_width="wrap_content"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:text="As informações contidas neste aplicativo são resposabilidade dos administradores"
-        android:textAlignment="center"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/buttonTermosdeUso"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="40dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp"
+        android:textSize="16dp"
+        />
+
+    <TextView
+        android:id="@+id/textoEquipeDesenvolvimento"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Equipe de desenvolvimento"
+        android:textAlignment="textStart"
+        app:layout_constraintTop_toBottomOf="@id/textoSobre"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="50dp"
+        android:textSize="16dp"
+        />
+
+
+    <TextView
+        android:id="@+id/textoEquipeDesenvolvimentoNomes"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:text="Janaina Keroline Ercole Nicolle da Silva Costa Rafael Prestes Tombolato"
+        android:textAlignment="textStart"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeDesenvolvimento"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="2dp"
+        android:textSize="12dp"
+        />
+
+
+
+    <TextView
+        android:id="@+id/textoEquipeTecnica"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Equipe técnica"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeDesenvolvimentoNomes"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="20dp"
+        android:textSize="16dp"
+        />
+
+
+    <TextView
+        android:id="@+id/textoEquipeTecnicaNomes"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:text="Responsável 1 Responsável 2 Responsável 3"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeTecnica"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="5dp"
+        android:textSize="12dp"
+        />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
