--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,4 +8,47 @@
     android:background="@drawable/background">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:srcCompat="@drawable/logoufprbranca"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+         />
+
+
+    <TextView
+        android:id="@+id/text_manutencao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Manutenção"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
+
+
+    <TextView
+        android:id="@+id/container_user_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UFPR"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/text_manutencao"
+        app:layout_constraintStart_toEndOf="@id/text_manutencao"
+        android:layout_marginLeft="-50dp"
+
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
