--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,12 +105,13 @@
                 <TextView
                     android:id="@+id/textViewPrimeiroAcesso"
                     style="@style/linkAcesso"
+                    android:textAlignment="textEnd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="primeiroAcesso"
                     android:text="Primeiro Acesso?"
                     android:textColor="@color/gray"
-                    android:textAlignment="center"
+                    android:gravity="end"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="parent" />
