--- a/app/src/main/res/layout/activity_sobre_app.xml
+++ b/app/src/main/res/layout/activity_sobre_app.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SobreApp">
+    tools:context=".SobreApp"
+    android:background="@color/white">
 
 
     <ImageView
         android:id="@+id/imagemufprSobre"
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:src="@drawable/ufpr_primeiroacesso"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +30,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="10dp"
+        android:onClick="closeActivity"
         />
 
 
@@ -78,6 +82,7 @@
         app:layout_constraintTop_toBottomOf="@id/buttonTermosdeUso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="40dp"
@@ -93,7 +98,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="20dp"
-        android:onClick="menuOperario"
+        android:onClick="menuDeslogado"
         />
 
     <TextView
@@ -102,6 +107,7 @@
         android:layout_height="wrap_content"
         android:text="Equipe de desenvolvimento"
         android:textAlignment="textStart"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/textoSobre"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="40dp"
@@ -114,6 +120,7 @@
     <TextView
         android:id="@+id/textoEquipeDesenvolvimentoNomes1"
         android:layout_width="180dp"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:text="Janaina Keroline Ercole"
         android:textAlignment="textStart"
@@ -128,6 +135,7 @@
     <TextView
         android:id="@+id/textoEquipeDesenvolvimentoNomes2"
         android:layout_width="180dp"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:text="Nicolle da Silva Costa"
         android:textAlignment="textStart"
@@ -141,6 +149,7 @@
     <TextView
         android:id="@+id/textoEquipeDesenvolvimentoNomes3"
         android:layout_width="180dp"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:text="Rafael Prestes Tombolato"
         android:textAlignment="textStart"
@@ -167,6 +176,7 @@
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/black"
         android:textSize="16dp"
         />
 
@@ -176,6 +186,7 @@
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:text="Responsável 1"
+        android:textColor="@color/black"
         android:textAlignment="textEnd"
         app:layout_constraintTop_toBottomOf="@id/textoEquipeTecnica"
         app:layout_constraintEnd_toEndOf="parent"
@@ -188,6 +199,7 @@
     <TextView
         android:id="@+id/textoEquipeTecnicaNomes2"
         android:layout_width="90dp"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:text="Responsável 2"
         android:textAlignment="textEnd"
@@ -202,6 +214,7 @@
         android:id="@+id/textoEquipeTecnicaNomes3"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:text="Responsável 3"
         android:textAlignment="textEnd"
         app:layout_constraintTop_toBottomOf="@id/textoEquipeTecnicaNomes2"
