--- a/app/src/main/res/layout/activity_detalhes_ordem_servico_aberta.xml
+++ b/app/src/main/res/layout/activity_detalhes_ordem_servico_aberta.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetalhesOrdemServicoAberta" android:background="@color/blue">
+    tools:context=".operario.DetalhesOrdemServicoAberta" android:background="@color/blue">
 
 
     <com.google.android.material.appbar.AppBarLayout
