--- a/app/src/main/res/layout/activity_manter_ordem_de_servico.xml
+++ b/app/src/main/res/layout/activity_manter_ordem_de_servico.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManterOrdemDeServico" android:background="@color/blue">
+    tools:context=".operario.ManterOrdemDeServico" android:background="@color/blue">
 
 
     <com.google.android.material.appbar.AppBarLayout
