--- a/app/src/main/res/layout/activity_sobre_app_logado_usuario.xml
+++ b/app/src/main/res/layout/activity_sobre_app_logado_usuario.xml
@@ -4,6 +4,227 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SobreAppLogadoUsuario">
+    tools:context=".SobreAppLogadoUsuario"
+    android:background="@color/white">
+
+
+    <ImageView
+        android:id="@+id/imagemufprSobre"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ufpr_primeiroacesso"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+
+        />
+
+    <ImageView
+        android:id="@+id/closebutton2"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/baseline_close_24"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="10dp"
+        android:onClick="closeActivity"
+        />
+
+
+    <TextView
+        android:id="@+id/sobre"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:text="Sobre"
+        android:textAlignment="center"
+        android:textColor="@color/yellow"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/imagemufprSobre"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonPoliticaPrivacidade"
+        style="@style/Button_sobre"
+        android:onClick="mostrarPolitica"
+        android:text="Política de Privacidade"
+        android:layout_marginTop="70dp"
+        app:layout_constraintTop_toBottomOf="@id/imagemufprSobre"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:drawableRight="@drawable/seta_open"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonTermosdeUso"
+        style="@style/Button_sobre"
+        android:onClick="mostrarTermos"
+        android:text="Termos de Uso"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPoliticaPrivacidade"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:drawableRight="@drawable/seta_open"
+        />
+
+    <TextView
+        android:id="@+id/textoSobre"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:text="As informações contidas neste aplicativo são resposabilidade dos administradores"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/buttonTermosdeUso"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp"
+        android:textSize="16dp"
+        />
+
+
+    <ImageView
+        android:id="@+id/menu"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/menuopcoesbranco"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"
+        android:onClick="menuUsuario"
+        />
+
+    <TextView
+        android:id="@+id/textoEquipeDesenvolvimento"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Equipe de desenvolvimento"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/textoSobre"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="50dp"
+        android:textSize="16dp"
+        />
+
+
+    <TextView
+        android:id="@+id/textoEquipeDesenvolvimentoNomes1"
+        android:layout_width="180dp"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:text="Janaina Keroline Ercole"
+        android:textAlignment="textStart"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeDesenvolvimento"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="2dp"
+        android:textSize="12dp"
+        />
+
+    <TextView
+        android:id="@+id/textoEquipeDesenvolvimentoNomes2"
+        android:layout_width="180dp"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:text="Nicolle da Silva Costa"
+        android:textAlignment="textStart"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeDesenvolvimentoNomes1"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="2dp"
+        android:textSize="12dp"
+        />
+    <TextView
+        android:id="@+id/textoEquipeDesenvolvimentoNomes3"
+        android:layout_width="180dp"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:text="Rafael Prestes Tombolato"
+        android:textAlignment="textStart"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeDesenvolvimentoNomes2"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="2dp"
+        android:textSize="12dp"
+        />
+
+
+
+
+
+    <TextView
+        android:id="@+id/textoEquipeTecnica"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Equipe técnica"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeDesenvolvimentoNomes3"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
+        android:textSize="16dp"
+        />
+
+
+    <TextView
+        android:id="@+id/textoEquipeTecnicaNomes1"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:text="Responsável 1"
+        android:textColor="@color/black"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeTecnica"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="5dp"
+        android:textSize="12dp"
+        />
+
+    <TextView
+        android:id="@+id/textoEquipeTecnicaNomes2"
+        android:layout_width="90dp"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:text="Responsável 2"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeTecnicaNomes1"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="5dp"
+        android:textSize="12dp"
+        />
+    <TextView
+        android:id="@+id/textoEquipeTecnicaNomes3"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:text="Responsável 3"
+        android:textAlignment="textEnd"
+        app:layout_constraintTop_toBottomOf="@id/textoEquipeTecnicaNomes2"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="5dp"
+        android:textSize="12dp"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
