--- a/app/src/main/res/menu/menu_usuario.xml
+++ b/app/src/main/res/menu/menu_usuario.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/baseline_person_2_24" android:iconTint="@color/blue" app:showAsAction="never"  />
 
 
-    <item android:id="@+id/sobreApp" android:title="@string/sobre"
+    <item android:id="@+id/sobreAppUsuarioLogado" android:title="@string/sobre"
         android:icon="@drawable/sobre" android:iconTint="@color/blue" app:showAsAction="never"  />
 
 
