--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -208,7 +208,7 @@
 
     <Spinner
         android:id="@+id/campusSpinner"
-        android:textAppearance="@style/SpinnerTextStyle"
+        android:textColor="@color/black"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginStart="30dp"
@@ -219,7 +219,7 @@
 
     <Spinner
         android:id="@+id/predioSpinner"
-        android:textAppearance="@style/SpinnerTextStyle"
+        android:textColor="@color/black"
         android:layout_marginTop="5dp"
         android:layout_width="200dp"
         android:layout_height="35dp"
