--- a/app/src/main/res/layout/chamado_item.xml
+++ b/app/src/main/res/layout/chamado_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="180dp"
@@ -10,6 +11,23 @@
     android:padding="5dp"
 
     >
+
+    <com.google.android.material.card.MaterialCardView
+
+        android:id="@+id/materialCardView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        app:cardElevation="8dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+
+
+
 
 
 
@@ -103,6 +121,13 @@
         />
 
  </LinearLayout>
+
+
+
+
+
+    </com.google.android.material.card.MaterialCardView>
+
 
 
 
